[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core>=0.11",
    "setuptools>=61",
    "wheel",
    "jax"
]

[project]
name = "roughpy-jax"
version = "0.0.1"
dynamic = ["readme"]
description = ""
authors = [
    { name = "The RoughPy Authors", email = "info@datasig.ac.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "jax",
]

[tool.scikit-build]
cmake.args = [
    "-DROUGHPY_TEST_BUILD=ON",
    "-DROUGHPY_BUILD_PYLIB=ON"
]
build.verbose = true
cmake.build-type = "Release"
experimental=true
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "# Changelog\n\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG"

[tool.cibuildwheel]
skip = [
    "*win32",
    "*-musl*",
    "pp*",
    "*linux_i686",
    "*universal2",
    "cp3{6,7,8}-*",
    "cp3{9}-macos*"
]
build-verbosity=1
